[gd_scene load_steps=33 format=3 uid="uid://bl3sooxy5ngip"]

[ext_resource type="Texture2D" uid="uid://or7qx3bylf80" path="res://rocky_roads/Tilesets/tileset_forest.png" id="1_i24mc"]
[ext_resource type="Texture2D" uid="uid://c7dmdwmntia06" path="res://rocky_roads/Deco/clouds.png" id="2_s7crp"]
[ext_resource type="Texture2D" uid="uid://csktloilix5ai" path="res://rocky_roads/Objects/sign.png" id="3_bhegj"]
[ext_resource type="Script" path="res://scripts/game.gd" id="4_n6q47"]
[ext_resource type="Texture2D" uid="uid://bbdfsjc0vrx5n" path="res://rocky_roads/Objects/coin_gold.png" id="5_ct0n7"]
[ext_resource type="Texture2D" uid="uid://nlanr00q3m0m" path="res://rocky_roads/Deco/water_a_8frames.png" id="6_spcl7"]
[ext_resource type="Texture2D" uid="uid://djtqc4iegjyk" path="res://rocky_roads/Deco/sun.png" id="7_655ll"]
[ext_resource type="Texture2D" uid="uid://hu8ug54k5h6c" path="res://rocky_roads/Backgrounds/trees.png" id="8_jvdso"]
[ext_resource type="Script" path="res://scripts/deadZone.gd" id="9_o07et"]
[ext_resource type="Texture2D" uid="uid://qpykc73otcha" path="res://rocky_roads/Enemies/spikes.png" id="10_r2ggb"]
[ext_resource type="PackedScene" uid="uid://cjj0s16uapswj" path="res://scenes/packed/coin.tscn" id="10_xgq10"]
[ext_resource type="PackedScene" uid="uid://0pxk3tcg3l60" path="res://scenes/packed/player.tscn" id="11_k5ejf"]

[sub_resource type="TileMapPattern" id="TileMapPattern_gbeb3"]
tile_data = PackedInt32Array(0, 131072, 1, 1, 196608, 1, 2, 262144, 1, 3, 327680, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_dv27v"]
tile_data = PackedInt32Array(0, 1, 0, 1, 65537, 0, 2, 131073, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_jd4x8"]
tile_data = PackedInt32Array(0, 1, 2, 1, 65537, 2, 2, 131073, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_g1xo1"]
tile_data = PackedInt32Array(0, 131072, 1, 65536, 65536, 3, 131072, 65536, 4, 1, 196608, 1, 65537, 262144, 3, 131073, 131072, 4, 2, 262144, 1, 65538, 196608, 3, 131074, 196608, 4, 3, 196608, 1, 65539, 262144, 3, 131075, 131072, 4, 4, 262144, 1, 65540, 262144, 3, 131076, 196608, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_quxct"]
tile_data = PackedInt32Array(0, 524288, 3, 1, 589824, 3)

[sub_resource type="TileMapPattern" id="TileMapPattern_yurt0"]
tile_data = PackedInt32Array(0, 196608, 1, 65536, 262144, 3, 131072, 262144, 3, 196608, 262144, 3, 262144, 262144, 3, 327680, 196608, 4, 1, 262144, 1, 65537, 262144, 3, 131073, 196608, 2, 196609, 262144, 2, 262145, 262144, 3, 327681, 262144, 4, 2, 196608, 1, 65538, 262144, 3, 131074, 262144, 3, 196610, 262144, 3, 262146, 262144, 3, 327682, 131072, 4, 3, 327680, 1, 65539, 393216, 3, 131075, 393216, 3, 196611, 393216, 3, 262147, 393216, 3, 327683, 393216, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_wgn22"]
tile_data = PackedInt32Array(0, 196608, 1, 65536, 262144, 3, 131072, 262144, 3, 196608, 262144, 3, 262144, 262144, 3, 327680, 196608, 4, 1, 262144, 1, 65537, 262144, 3, 131073, 196608, 2, 196609, 262144, 2, 262145, 262144, 3, 327681, 262144, 4, 2, 196608, 1, 65538, 262144, 3, 131074, 262144, 3, 196610, 262144, 3, 262146, 262144, 3, 327682, 131072, 4, 3, 327680, 1, 65539, 393216, 3, 131075, 327680, 2, 196611, 262144, 3, 262147, 262144, 3, 327683, 196608, 4, 131076, 262144, 1, 196612, 262144, 3, 262148, 262144, 3, 327684, 196608, 4, 131077, 196608, 1, 196613, 262144, 3, 262149, 262144, 3, 327685, 131072, 4, 131078, 262144, 1, 196614, 327680, 3, 262150, 196608, 3, 327686, 262144, 4, 131079, 327680, 1, 196615, 393216, 3, 262151, 393216, 3, 327687, 393216, 4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uvna7"]
texture = ExtResource("1_i24mc")
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hfrqj"]
texture = ExtResource("2_s7crp")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_15wa2"]
texture = ExtResource("3_bhegj")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_t2dct"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_uvna7")
sources/1 = SubResource("TileSetAtlasSource_hfrqj")
sources/2 = SubResource("TileSetAtlasSource_15wa2")
pattern_0 = SubResource("TileMapPattern_gbeb3")
pattern_1 = SubResource("TileMapPattern_dv27v")
pattern_2 = SubResource("TileMapPattern_jd4x8")
pattern_3 = SubResource("TileMapPattern_g1xo1")
pattern_4 = SubResource("TileMapPattern_quxct")
pattern_5 = SubResource("TileMapPattern_yurt0")
pattern_6 = SubResource("TileMapPattern_wgn22")

[sub_resource type="LabelSettings" id="LabelSettings_20vpd"]
line_spacing = 0.0
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_nq1pc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x0akn"]
resource_name = "shine"
length = 1.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_68lno"]
_data = {
"RESET": SubResource("Animation_nq1pc"),
"shine": SubResource("Animation_x0akn")
}

[sub_resource type="Animation" id="Animation_70vri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tpktm"]
resource_name = "wave"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdx75"]
_data = {
"RESET": SubResource("Animation_70vri"),
"wave": SubResource("Animation_tpktm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83pxt"]
size = Vector2(512, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cl3vc"]
size = Vector2(22, 12)

[node name="Stage" type="TileMap"]
tile_set = SubResource("TileSet_t2dct")
format = 2
layer_0/tile_data = PackedInt32Array(-327678, 131073, 1, -327679, 65537, 1, -327680, 1, 1, -196615, 1, 0, -196614, 65537, 0, -196613, 131073, 1, 65544, 2, 1, -262153, 1, 0, -262152, 65537, 0, -262151, 131073, 0, -131076, 524288, 3, -131075, 589824, 3, 131077, 196608, 1, 196613, 262144, 3, 262149, 131072, 4, 131078, 262144, 1, 196614, 196608, 3, 262150, 196608, 4, 131079, 196608, 1, 196615, 262144, 3, 262151, 131072, 4, 131080, 262144, 1, 196616, 262144, 3, 262152, 196608, 4, 131076, 196608, 1, 131075, 196608, 1, 131074, 196608, 1, 131073, 262144, 1, 131072, 262144, 1, 196607, 65536, 2, 262143, 65536, 3, 327679, 65536, 4, 262144, 131072, 4, 262145, 131072, 4, 262146, 131072, 4, 262147, 131072, 4, 262148, 131072, 4, 196608, 262144, 3, 196609, 262144, 3, 196610, 262144, 3, 196611, 262144, 3, 196612, 262144, 3, -65535, 524288, 3, -65534, 589824, 3, 196598, 262144, 1, 262134, 262144, 3, 327670, 196608, 2, 196599, 196608, 1, 262135, 262144, 3, 327671, 262144, 3, 196600, 327680, 1, 262136, 393216, 3, 327672, 327680, 2, 327673, 262144, 1, 327674, 196608, 1, 327675, 262144, 1, 327676, 327680, 1)

[node name="HUD" type="CanvasLayer" parent="." node_paths=PackedStringArray("coin_list") groups=["coin_listeners", "dead_zone_listeners"]]
follow_viewport_enabled = true
script = ExtResource("4_n6q47")
coin_list = NodePath("../Objects/Coins")
stage = 2

[node name="CoinCounter" type="Label" parent="HUD"]
offset_left = -120.0
offset_top = -72.0
offset_right = -113.0
offset_bottom = -55.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "0"
label_settings = SubResource("LabelSettings_20vpd")
vertical_alignment = 1

[node name="CoinIcon" type="Sprite2D" parent="HUD"]
position = Vector2(-128, -64)
texture = ExtResource("5_ct0n7")
hframes = 8

[node name="Scenery" type="Node" parent="."]

[node name="Background" type="Node2D" parent="Scenery"]
show_behind_parent = true
z_index = -100
z_as_relative = false

[node name="Sky" type="Sprite2D" parent="Scenery/Background"]
position = Vector2(4.76837e-06, -40)
scale = Vector2(1.3125, 8)
texture = ExtResource("6_spcl7")

[node name="Sun" type="Sprite2D" parent="Scenery/Background"]
position = Vector2(120, -64)
scale = Vector2(0.78125, 1)
texture = ExtResource("7_655ll")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Scenery/Background/Sun"]
autoplay = "shine"
libraries = {
"": SubResource("AnimationLibrary_68lno")
}

[node name="Trees" type="Sprite2D" parent="Scenery/Background"]
position = Vector2(0, -24)
scale = Vector2(1.1875, 0.988281)
texture = ExtResource("8_jvdso")

[node name="Water" type="Sprite2D" parent="Scenery/Background"]
position = Vector2(0, 48)
scale = Vector2(9.5, 1)
texture = ExtResource("6_spcl7")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Scenery/Background/Water"]
autoplay = "wave"
libraries = {
"": SubResource("AnimationLibrary_xdx75")
}

[node name="Areas" type="Node" parent="Scenery"]

[node name="DeadZone" type="Area2D" parent="Scenery/Areas"]
collision_mask = 512
script = ExtResource("9_o07et")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Areas/DeadZone"]
position = Vector2(0, 140)
shape = SubResource("RectangleShape2D_83pxt")

[node name="Spikes" type="Node" parent="Scenery/Areas"]

[node name="SpikeSet" type="Area2D" parent="Scenery/Areas/Spikes"]
position = Vector2(-104, 60)
collision_mask = 512

[node name="Sprite2D" type="Sprite2D" parent="Scenery/Areas/Spikes/SpikeSet"]
position = Vector2(8, -8.5)
scale = Vector2(2, 1.5625)
texture = ExtResource("10_r2ggb")
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Areas/Spikes/SpikeSet"]
position = Vector2(8, -2)
shape = SubResource("RectangleShape2D_cl3vc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Objects" type="Node" parent="."]

[node name="Coins" type="Node" parent="Objects"]

[node name="Coin" parent="Objects/Coins" groups=["coins"] instance=ExtResource("10_xgq10")]
position = Vector2(112, 0)

[node name="Coin2" parent="Objects/Coins" groups=["coins"] instance=ExtResource("10_xgq10")]
position = Vector2(-49, -56)

[node name="Coin3" parent="Objects/Coins" groups=["coins"] instance=ExtResource("10_xgq10")]
position = Vector2(-95, 32)

[node name="Player" parent="." instance=ExtResource("11_k5ejf")]
position = Vector2(-133, 24)

[node name="Timers" type="Node" parent="."]

[node name="StageClearTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="dead" from="HUD" to="Player" method="_on_dead"]
[connection signal="body_entered" from="Scenery/Areas/DeadZone" to="Scenery/Areas/DeadZone" method="_on_zone_entered"]
[connection signal="body_entered" from="Scenery/Areas/Spikes/SpikeSet" to="HUD" method="_on_spike_body_entered"]
[connection signal="timeout" from="Timers/StageClearTimer" to="HUD" method="_on_stage_clear_timeout"]
[connection signal="timeout" from="Timers/DeathTimer" to="HUD" method="_on_death_timer_timeout"]
